--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,3 +29,11 @@ header, article, footer {
 .table {
   margin: 0 5vh;
 }
+
+.drink-image {
+  width: 50px;
+}
+
+.drink-image-bigger {
+  width: 100px;
+}
