--- a/src/components/tinder-cards/Deck.css
+++ b/src/components/tinder-cards/Deck.css
@@ -21,12 +21,11 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
-      39 39,
+  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png") 39 39,
     auto;
 }
 
-#deckRoot > div {
+#deckRoot>div {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -36,7 +35,7 @@ body {
   justify-content: center;
 }
 
-#deckRoot > div > div {
+#deckRoot>div>div {
   padding: 5px;
   background-color: white;
   background-size: auto 85%;
@@ -79,15 +78,19 @@ h5 {
   margin-left: 2px;
   color: lightgray;
 }
+
 h5:last-of-type {
   color: darkgray;
 }
 
-.card > div {
+.card>div {
   height: 380px !important;
 }
 
 .card {
+  /* DOES NOT WORK */
+  /* touch-action: none; */
+
   height: 500px !important;
 }
 
@@ -95,6 +98,6 @@ h5:last-of-type {
   bottom: -15px !important;
 }
 
-.slider-control-bottomcenter > ul > li > button {
+.slider-control-bottomcenter>ul>li>button {
   color: salmon !important;
 }
